# demo-app

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
.github /workflows/: Build.yaml
.github/workflows/: Build.yml
k8s/: deployment.yaml
